# auraflow

./: .gitignore  README.md  create-green-icon.sh  create_active_icon.py  main.py  package-lock.json  package.json  tint-icon.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  script.js  style.css
