[package]
name = "auraflow"
version = "0.1.0"
description = "Smart mouse jiggler to keep your computer awake"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "dialog-message", "shell-open", "icon-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.2"
parking_lot = "0.12"
rand = "0.8"
image = "0.24"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
